Se agregan cambios a obligaciones pendientes

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3777,8 +3777,8 @@ obligacion.sujeto.predial.aniograv=Año Gravable
 obligacion.sujeto.predial.edoobliga=Estado de Obligación
 obligacion.sujeto.predial.obligacion=Obligación
 obligacion.sujeto.predial.actooficial=Acto Oficial
-obligacion.sujeto.predial.presendecla=Presentar Declaración
-obligacion.sujeto.predial.genrop=Generar ROP
+obligacion.sujeto.predial.cancelar=Cancelar
+obligacion.sujeto.predial.regresar=Regresar
 obligacion.sujeto.predial.paglinea=Pago en Línea
 
 obligacion.sujeto.ica.titulo=ICA
@@ -3787,8 +3787,8 @@ obligacion.sujeto.ica.periodo=Periodo
 obligacion.sujeto.ica.edoobliga=Estado de Obligación
 obligacion.sujeto.ica.obligacion=Obligación
 obligacion.sujeto.ica.actooficial=Acto Oficial
-obligacion.sujeto.ica.presendecla=Presentar Declaración
-obligacion.sujeto.ica.genrop=Generar ROP
+obligacion.sujeto.ica.regresar=Regresar
+obligacion.sujeto.ica.cancelar=Cancelar
 obligacion.sujeto.ica.paglinea=Pago en Línea
 
 obligacion.sujeto.vehiculos.titulo=Vehículos
@@ -3800,8 +3800,8 @@ obligacion.sujeto.vehiculos.aniograv=Año Gravable
 obligacion.sujeto.vehiculos.edoobliga=Estado de Obligación
 obligacion.sujeto.vehiculos.obligacion=Obligación
 obligacion.sujeto.vehiculos.actooficial=Acto Oficial
-obligacion.sujeto.vehiculos.presendecla=Presentar Declaración
-obligacion.sujeto.vehiculos.genrop=Generar ROP
+obligacion.sujeto.vehiculos.regresar=Regresar
+obligacion.sujeto.vehiculos.cancelar=Cancelar
 obligacion.sujeto.vehiculos.paglinea=Pago en Línea
 
 obligacion.sujeto.gasolina.titulo=Sobretasa a la Gasolina
@@ -3810,8 +3810,8 @@ obligacion.sujeto.gasolina.periodo=Periodo
 obligacion.sujeto.gasolina.edoobliga=Estado de Obligación
 obligacion.sujeto.gasolina.obligacion=Obligación
 obligacion.sujeto.gasolina.actooficial=Acto Oficial
-obligacion.sujeto.gasolina.presendecla=Presentar Declaración
-obligacion.sujeto.gasolina.paglinea=Pago en Línea
+obligacion.sujeto.gasolina.regresar=Regresar
+obligacion.sujeto.gasolina.cancelar=Cancelar
 
 obligacion.sujeto.delurbana.titulo=Delienación urbana
 obligacion.sujeto.delurbana.cdu=CDU
@@ -3821,8 +3821,8 @@ obligacion.sujeto.delurbana.aniograv=Año Gravable
 obligacion.sujeto.delurbana.edoobliga=Estado de Obligación
 obligacion.sujeto.delurbana.obligacion=Obligación
 obligacion.sujeto.delurbana.actooficial=Acto Oficial
-obligacion.sujeto.delurbana.presendecla=Presentar Declaración
-obligacion.sujeto.delurbana.genrop=Generar ROP
+obligacion.sujeto.delurbana.regresar=Regresar
+obligacion.sujeto.delurbana.cancelar=Cancelar
 obligacion.sujeto.delurbana.paglinea=Pago en Línea
 
 obligacion.sujeto.publiext.titulo=Publicidad Exterior
@@ -3833,8 +3833,8 @@ obligacion.sujeto.publiext.aniograv=Año Gravable
 obligacion.sujeto.publiext.edoobliga=Estado de Obligación
 obligacion.sujeto.publiext.obligacion=Obligación
 obligacion.sujeto.publiext.actooficial=Acto Oficial
-obligacion.sujeto.publiext.presendecla=Presentar Declaración
-obligacion.sujeto.publiext.paglinea=Pago en Línea
+obligacion.sujeto.publiext.regresar=Regresar
+obligacion.sujeto.publiext.cancelar=Cancelar
 
 obligacion.inicial.selcimpuesto= Impuesto
 obligacion.inicial.periodo= Periodo
@@ -3881,7 +3881,7 @@ obligacion.inicial.gasolina.fecreporte=Fecha reporte
 
 obligacion.inicial.delineacion.cdu=CDU
 obligacion.inicial.delineacion.licconstr=Licencia de Construcción
-obligacion.inicial.delineacion.direccion=Dirección
+obligacion.inicial.delineacion.exp=Fecha de expedición
 obligacion.inicial.delineacion.visualizar=Visualizar
 obligacion.inicial.delineacion.pdf=Descargar PDF 
 obligacion.inicial.delineacion.aniograv= Año Gravable
