Delineacion urbana (Pago en linea) Modificaciones para pago PSE (Etiqueta CDU, valor CDU, periodo, tipo de impuesto)

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3522,7 +3522,7 @@ psePaymentForm.impuesto=Impuesto
 psePaymentForm.anoGravable=Año Gravable
 psePaymentForm.CHIP=CHIP
 psePaymentForm.periodo=Periodo
-psePaymentForm.CUD=CUD
+psePaymentForm.CDU=CDU
 psePaymentForm.noIdentificacion=No. identificación
 psePaymentForm.DV=DV
 psePaymentForm.tipoDeIdentificacion=Tipo de identificación
