Cambios para boton de ROP y se agregan cambios de presentarDeclaracion

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4798,6 +4798,7 @@ rop.generar.totalpagar=Total a pagar
 rop.generar.parcial=Parcial a pagar
 rop.generar.generar=Generar Recibo Oficial de Pago
 rop.generar.regresar=Regresar
+rop.generar.paglinea=Pagar en línea
 
 
 #Tramites Contribuyente
