--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4819,6 +4819,8 @@ tramites.crear.inicial.adjuntar=Adjuntar documento
 tramites.crear.inicial.cancelar=Cancelar
 tramites.crear.inicial.enviar=Enviar
 tramites.crear.inicial.selarch=Seleccionar archivo
+tramites.crear.inicial.adjdoc=Adjunta documentos
+
 
 tramites.seguimiento.inicial.titulo=Trámites
 tramites.seguimiento.inicial.descrip=En la Oficina Virtual podrás crear y dar seguimiento a tus trámites de una forma muy sencilla
