Se agregan cambios a tramites

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4819,7 +4819,8 @@ tramites.crear.inicial.adjuntar=Adjuntar documento
 tramites.crear.inicial.cancelar=Cancelar
 tramites.crear.inicial.enviar=Enviar
 tramites.crear.inicial.selarch=Seleccionar archivo
-tramites.crear.inicial.adjdoc=Adjunta documentos
+tramites.crear.inicial.adjdoc=Nombre documento
+tramites.crear.inicial.adj=Adjuntar
 
 
 tramites.seguimiento.inicial.titulo=Trámites
