--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4821,6 +4821,7 @@ tramites.crear.inicial.enviar=Enviar
 tramites.crear.inicial.selarch=Seleccionar archivo
 tramites.crear.inicial.adjdoc=Nombre documento
 tramites.crear.inicial.adj=Adjuntar
+tramites.crear.inicial.correo=Correo electrónico
 
 
 tramites.seguimiento.inicial.titulo=Trámites
