Pago en linea - Ajustes - boton de envio - PSE/CRE

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4110,6 +4110,11 @@ pse.message.info.done.transaction.with.status=Transacción realizada con éxito 
 pse.message.info.success.transaction=Transacción exitosa
 pse.message.info.error.transaction.try.again=Transacción denegada, intente de nuevo
 
+credibanco.message.error.no.connection=Occurio un error con la conexión a Crebibanco
+credibanco.message.info.done.transaction.with.status=Transacción realizada con éxito y pendiente de procesar
+credibanco.message.info.success.transaction=Transacción exitosa
+credibanco.message.info.error.transaction.try.again=Transacción denegada, intente de nuevo 
+
 certideclara.inicial.titulo= Certificaciones de declaración
 certideclara.inicial.tipo= Tipo de certificación
 certideclara.inicial.selcimpuesto= Impuesto
