Se agregan cambios a estado de cuenta y relacion de pagos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3780,6 +3780,8 @@ obligacion.sujeto.predial.actooficial=Acto Oficial
 obligacion.sujeto.predial.cancelar=Cancelar
 obligacion.sujeto.predial.regresar=Regresar
 obligacion.sujeto.predial.paglinea=Pago en Línea
+obligacion.sujeto.predial.presendecla=Prsentar declaración
+obligacion.sujeto.predial.genrop=Generar ROP
 
 obligacion.sujeto.ica.titulo=ICA
 obligacion.sujeto.ica.aniograv=Año Gravable
@@ -3790,6 +3792,8 @@ obligacion.sujeto.ica.actooficial=Acto Oficial
 obligacion.sujeto.ica.regresar=Regresar
 obligacion.sujeto.ica.cancelar=Cancelar
 obligacion.sujeto.ica.paglinea=Pago en Línea
+obligacion.sujeto.ica.presendecla=Presentar declaración
+obligacion.sujeto.ica.genrop=Generar ROP
 
 obligacion.sujeto.vehiculos.titulo=Vehículos
 obligacion.sujeto.vehiculos.placa=Placa
@@ -3803,6 +3807,8 @@ obligacion.sujeto.vehiculos.actooficial=Acto Oficial
 obligacion.sujeto.vehiculos.regresar=Regresar
 obligacion.sujeto.vehiculos.cancelar=Cancelar
 obligacion.sujeto.vehiculos.paglinea=Pago en Línea
+obligacion.sujeto.vehiculos.genrop=Generar ROP
+obligacion.sujeto.vehiculos.presendecla=Presentar declaración
 
 obligacion.sujeto.gasolina.titulo=Sobretasa a la Gasolina
 obligacion.sujeto.gasolina.aniograv=Año Gravable
@@ -3812,6 +3818,8 @@ obligacion.sujeto.gasolina.obligacion=Obligación
 obligacion.sujeto.gasolina.actooficial=Acto Oficial
 obligacion.sujeto.gasolina.regresar=Regresar
 obligacion.sujeto.gasolina.cancelar=Cancelar
+obligacion.sujeto.gasolina.presendecla=Presentar declaración
+obligacion.sujeto.gasolina.paglinea=Pagar en línea
 
 obligacion.sujeto.delurbana.titulo=Delienación urbana
 obligacion.sujeto.delurbana.cdu=CDU
@@ -3824,6 +3832,8 @@ obligacion.sujeto.delurbana.actooficial=Acto Oficial
 obligacion.sujeto.delurbana.regresar=Regresar
 obligacion.sujeto.delurbana.cancelar=Cancelar
 obligacion.sujeto.delurbana.paglinea=Pago en Línea
+obligacion.sujeto.delurbana.presendecla=Presentar declaración
+obligacion.sujeto.delurbana.genrop=Generar ROP
 
 obligacion.sujeto.publiext.titulo=Publicidad Exterior
 obligacion.sujeto.publiext.noresol=Número de Resolución
@@ -3835,6 +3845,8 @@ obligacion.sujeto.publiext.obligacion=Obligación
 obligacion.sujeto.publiext.actooficial=Acto Oficial
 obligacion.sujeto.publiext.regresar=Regresar
 obligacion.sujeto.publiext.cancelar=Cancelar
+obligacion.sujeto.publiext.presendecla=Presentar declaración
+obligacion.sujeto.publiext.paglinea=Pagar en línea
 
 obligacion.inicial.selcimpuesto= Impuesto
 obligacion.inicial.periodo= Periodo
@@ -3913,7 +3925,7 @@ relacion.inicial.predio.norefrecaudo=No. referencia recaudo
 relacion.inicial.predio.sticker=Sticker
 relacion.inicial.predio.fecpreseta=Fecha de presentación
 relacion.inicial.predio.totpagado=Total pagado
-relacion.inicial.predio.totaporte=Total con aporte coluntario
+relacion.inicial.predio.totaporte=Total con aporte voluntario
 
 relacion.inicial.vehiculo.titulo=Vehículos
 relacion.inicial.vehiculo.placa= Placa
@@ -3939,6 +3951,7 @@ relacion.inicial.ica.numrefrec= No. referencia recaudo
 relacion.inicial.ica.sticker= Sticker
 relacion.inicial.ica.fecprese=Fecha de presentación
 relacion.inicial.ica.totpag=Total pagado
+relacion.inicial.ica.totapovol=Total con aporte voluntario
 
 relacion.inicial.delineacion.titulo=Delineación Urbana
 relacion.inicial.delineacion.cdu=CDU
@@ -3965,6 +3978,11 @@ relacion.inicial.delineacion.retencion.sticker=Sticker
 relacion.inicial.delineacion.retencion.tipdocu=Tipo de documento
 relacion.inicial.delineacion.retencion.fecprese=Fecha de presentación
 relacion.inicial.delineacion.retencion.totpag=Total pagado
+
+relacion.inicial.delineacion.radicados.cdu=CDU
+relacion.inicial.delineacion.radicados.radicado=Radicado
+relacion.inicial.delineacion.radicados.direccion=Dirección
+relacion.inicial.delineacion.radicados.visualizar=Visualizar
 
 relacion.inicial.gasolina.titulo=Sobretasa a la gasolina
 relacion.inicial.gasolina.tipdoc=Tipo de documento
@@ -4067,6 +4085,7 @@ edocuenta.inicial.deliurbana.direcobre=Dirección de obra
 edocuenta.inicial.deliurbana.orientacion=Orientación
 edocuenta.inicial.deliurbana.vigencia=Vigencia
 
+
 edocuenta.inicial.gasolina.titulo=Sobretasa a la gasolina
 edocuenta.inicial.gasolina.anigrav=Año gravable
 edocuenta.inicial.gasolina.periodo=Periodo
@@ -4104,6 +4123,9 @@ edocuenta.inicial.obligaciones.saldocargo=Saldo a cargo
 edocuenta.inicial.obligaciones.saldofavor=Saldo a favor
 edocuenta.inicial.obligaciones.total=Total
 edocuenta.inicial.obligaciones.destino=Destino hacendario
+edocuenta.inicial.obligaciones.desthacen=Destino hacendario
+edocuenta.inicial.obligaciones.impuesto=Impuesto
+edocuenta.inicial.obligaciones.saldcuneta=Saldo en cuenta
 
 pse.message.error.no.connection=Occurio un error con la conexión a PSE
 pse.message.info.done.transaction.with.status=Transacción realizada con éxito y pendiente de procesar
