Cambios en Obligaciones

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1387,7 +1387,7 @@ text.account.profile.certipagos= Certificación de pagos
 text.account.profile.declarafirm= Lista de Declaraciones a Firmar
 text.account.profile.delineacion= Delineación Urbana
 text.account.profile.buzon= Mi Buzón
-text.account.profile.oblipendienetes= Obligaciones Pendientes
+text.account.profile.oblipendienetes= Obligaciones
 text.account.profile.relapagos= Relación de Pagos
 text.account.profile.vehiculos= Sobre Vehículos
 text.account.profile.estadocuenta= Estado de Cuenta
@@ -1995,7 +1995,7 @@ delineacion.urbana.declaration.corrections=Corrección de Declaraciones
 delineacion.urbana.payments.ROPGeneration=Generación de ROP
 delineacion.urbana.payments.PSE=PSE
 delineacion.urbana.reports.paymentCertifications=Certificaciones de Pagos
-delineacion.urbana.reports.pendingDuties=Obligaciones Pendientes
+delineacion.urbana.reports.pendingDuties=Obligaciones
 delineacion.urbana.reports.paymentRelation=Relación de Pagos
 delineacion.urbana.reports.accountStatement=Estado de Cuenta
 delineacion.urbana.nota = Para conocer el detalle de los Radicados agrupados en el Código de Delineación Urbana (C.D.U.), da clic en Ver de la columna correspondiente.
@@ -2004,7 +2004,7 @@ delineacion.urbana.nota = Para conocer el detalle de los Radicados agrupados en 
 delineacion.urbana.detail.title=Detalle Delineación Urbana
 delineacion.urbana.detail.selectYear=Selecciona el año gravable a consultar
 delineacion.urbana.detail.search=Buscar
-delineacion.urbana.detail.pedingObligations=Obligaciones pendientes
+delineacion.urbana.detail.pedingObligations=Obligaciones
 delineacion.urbana.detail.pedingObligations.imporant=IMPORTANTE
 delineacion.urbana.detail.pendingObligations.notes=Las obligaciones del titular del documento de identificación consultado, son las reportadas por el sistema de información tributaria a partir del año siguiente al registro de la fecha en la cual la persona es propietaria o responsable del objeto asociado del inmueble o vehículo. Esta información se expide sin perjuicio de los procesos que adelanten las dependencias de la Dirección de Impuestos de Bogotá y de sus facultades de fiscalización, verificación y corrección que tiene la administración, situaciones que pueden presentar modificaciones posteriores a la presente información.
 delineacion.urbana.detail.pendingObligations.period=Periodo Gravable
@@ -2118,7 +2118,7 @@ predial.unificado.declaration.paymentcoupons=Cupones de pago
 predial.unificado.payments.ROPGeneration=Generación de ROP
 predial.unificado.payments.PSE=PSE
 predial.unificado.reports.paymentCertifications=Certificaciones de Pagos
-predial.unificado.reports.pendingDuties=Obligaciones Pendientes
+predial.unificado.reports.pendingDuties=Obligaciones
 predial.unificado.reports.paymentRelation=Relación de Pagos
 predial.unificado.reports.accountStatement=Estado de Cuenta
 predial.unificado.massiveLiquidations.massiveLiquidations=Liquidaciones Masivas
@@ -2126,7 +2126,7 @@ predial.unificado.massiveLiquidations.massiveLiquidations=Liquidaciones Masivas
 predial.unificado.detail.title=Detalle Predio
 predial.unificado.detail.selectYear=Selecciona el año gravable a consultar
 predial.unificado.detail.search=Buscar
-predial.unificado.detail.pedingObligations=Obligaciones pendientes
+predial.unificado.detail.pedingObligations=Obligaciones
 predial.unificado.detail.pedingObligations.imporant=IMPORTANTE
 predial.unificado.detail.pendingObligations.notes=Las obligaciones del titular del documento  de identificación consultado, son las reportadas por el sistema de información tributario a partir del año siguiente al registro de la fecha en la cual la persona es propietaria o responsable del objeto asociado del inmueble. Esta información se expide sin perjuicio de los procesos que adelanten las dependencias de la Dirección de Impuestos de Bogotá y de sus facultades de fiscalización, verificación y corrección que tiene la administración, situaciones que pueden presentar modificaciones posteriores a la presente información.
 predial.unificado.detail.pendingObligations.period=Periodo Gravable
@@ -2201,7 +2201,7 @@ sobre.vehiculos.declaration.paymentcoupons=Cupones de pago
 sobre.vehiculos.payments.ROPGeneration=Generación de ROP
 sobre.vehiculos.payments.PSE=PSE
 sobre.vehiculos.reports.paymentCertifications=Certificaciones de Pagos
-sobre.vehiculos.reports.pendingDuties=Obligaciones Pendientes
+sobre.vehiculos.reports.pendingDuties=Obligaciones
 sobre.vehiculos.reports.paymentRelation=Relación de Pagos
 sobre.vehiculos.reports.accountStatement=Estado de Cuenta
 sobre.vehiculos.massiveLiquidations.massiveLiquidations=Liquidaciones Masivas
@@ -2209,7 +2209,7 @@ sobre.vehiculos.massiveLiquidations.massiveLiquidations=Liquidaciones Masivas
 
 sobre.vehiculos.detail.selectYear=Selecciona el año gravable a consultar
 sobre.vehiculos.detail.search=Buscar
-sobre.vehiculos.detail.pedingObligations=Obligaciones pendientes
+sobre.vehiculos.detail.pedingObligations=Obligaciones
 sobre.vehiculos.detail.pedingObligations.imporant=IMPORTANTE
 sobre.vehiculos.detail.pendingObligations.notes=Las obligaciones del titular del documento  de identificación consultado, son las reportadas por el sistema de información tributario a partir del año siguiente al registro de la fecha en la cual la persona es propietaria o responsable del objeto asociado del inmueble o vehículo. Esta información se expide sin perjuicio de los procesos que adelanten las dependencias de la Dirección de Impuestos de Bogotá y de sus facultades de fiscalización, verificación y corrección que tiene la administración, situaciones que pueden presentar modificaciones posteriores a la presente información.
 sobre.vehiculos.detail.pendingObligations.period=Periodo Gravable
@@ -2369,7 +2369,7 @@ sobretasa.gasolina.payments=Pagos
 sobretasa.gasolina.payments.ROPGeneration=Generación de ROP
 sobretasa.gasolina.payments.PSE=Pago en línea
 sobretasa.gasolina.reports=Reportes
-sobretasa.gasolina.reports.pendingDuties=Obligaciones Pendientes
+sobretasa.gasolina.reports.pendingDuties=Obligaciones
 sobretasa.gasolina.reports.paymentRelation=Relación de Pagos
 sobretasa.gasolina.reports.accountStatement=Estado de Cuenta
 
@@ -2377,7 +2377,7 @@ sobretasa.gasolina.detail.title=Detalle Sobretasa a la Gasolina Motor
 sobretasa.gasolina.detail.selectYear=Selecciona el año gravable a consultar
 sobretasa.gasolina.detail.selectMonth=Selecciona el Periodo
 sobretasa.gasolina.detail.search=Buscar
-sobretasa.gasolina.detail.pedingObligations=Obligaciones pendientes
+sobretasa.gasolina.detail.pedingObligations=Obligaciones
 sobretasa.gasolina.detail.pedingObligations.imporant=IMPORTANTE
 sobretasa.gasolina.detail.pendingObligations.note1=Las obligaciones del titular del documento  de identificación consultado, son las reportadas por el sistema de información tributario a partir del año siguiente al registro de la fecha en la cual la persona es propietaria o responsable del objeto asociadodel inmueble o vehículo.
 sobretasa.gasolina.detail.pendingObligations.note2=Esta información se expide sin perjuicio de los procesos que adelanten las dependencias de la Dirección de Impuestos de Bogotá y de sus facultades de fiscalización, verificación y corrección que tiene la administración, situaciones que pueden presentar modificaciones posteriores a la presente información.
@@ -3757,9 +3757,12 @@ certificacion.inicial.deliur.radic=Radicados
 certificacion.inicial.deliur.prereten=Presentar retención
 #->FIN dev-maria 18/04/2019 textos para Certificación de Declaración
 
-obligacion.inicial.encabezado= Obligaciones Pendientes
-obligacion.inicial.descripcion=Este servicio te permitirá consultar las obligaciones pendientes que tienes como contribuyente respecto a los impuestos administrados por la Dirección Distrital de Impuestos de Bogotá.
-obligacion.inicial.titulo= Obligaciones Pendientes
+obligacion.inicial.encabezado= Obligaciones
+obligacion.inicial.descripcion=Este servicio te permitirá consultar las obligaciones que tienes como contribuyente respecto a los impuestos administrados por la Dirección Distrital de Impuestos de Bogotá.
+obligacion.inicial.titulo= Obligaciones
+obligacion.inicial.estatus=Estatus
+obligacion.inicial.imprimir=Imprimir
+
 
 obligacion.inicial.sujeto=Sujeto
 obligacion.inicial.impu=Impuesto
