Se agregan cambios para ajustes de tablas po rel nuevo tamaño del container

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3258,7 +3258,7 @@ error.Pago.PSE.error1 = Error al leer detalle de pago: {0}
 
 updatePwd.token.sameOldPassword=La nueva contraseña no puede ser igual a la anterior.
 
-delineacion.urbana.title=Deliación Urbana
+delineacion.urbana.title=Delineación Urbana
 delineacion.urbana.desciption=Es la declaración y pago que se realiza cuando existe una construcción nueva o refacción de las existentes. El hecho generador del impuesto de Delineación Urbana lo constituye la ejecución de obras o construcciones con licencia de construcción o reconocimiento.
 delineacion.urbana.propertiesList=Listado de Predios Registrados
 delineacion.urbana.CDU=C.D.U
