Se agregan cambios a la vista de datos de basicos, generales y de contacto de mi RIT y se agregan cambios a la vista de Datos Básicos de Gasolina

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1865,6 +1865,7 @@ mirit.personalData.secondFirstName=Segundo Nombre
 mirit.personalData.secondLasName=Segundo Apellido
 mirit.personalData.updateName=Actualizar Nombre
 mirit.personalData.certifName=Certificar Nombre
+mirit.personalData.dv=DV
 
 mirit.generalData.title=Mis datos generales Persona Natural
 mirit.generalData.treatment=Tratamiento
