Se agrega crear Agente y Asignarse como agente

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4931,5 +4931,276 @@ reexpedicion.factura.vehiculo.marca=Marca
 reexpedicion.factura.vehiculo.selec=Seleccionar
 reexpedicion.factura.vehiculo.desfac=Reexpedición de factura
 
+#crear agente autorizado
+autorizado.crear.inicial.titulo= Crear Agente Autorizado
+autorizado.crear.inicial.nota=¡Atención! Al asignar a una persona en su representación implica toda responsabilidad y poder para su representación por lo que le recomendamos estas acciones sean de manera clara
+ 
+autorizado.crear.buscar.titulo= 1.- Buscar contribuyente a asignar
+autorizado.crear.buscar.tipdoc=Tipo de documento
+autorizado.crear.buscar.numdoc=Número de documento
+autorizado.crear.buscar.fecexpe=Fecha de expedición
+autorizado.crear.buscar.cancelar=Cancelar
+autorizado.crear.buscar.buscar=Buscar
 
+autorizado.crear.table.tipdoc=Tipo documento
+autorizado.crear.table.numdoc=Número documento
+autorizado.crear.table.nombre=Nombre
+autorizado.crear.table.tipperson=Tipo de persona
+
+autorizado.crear.calidad.titulo=2.-Selecciona la calidad con la que quieres ser representado
+autorizado.crear.calidad.nota1= Debes de seleccionar al menos una calidad con la que serás representado y adjuntar los documentos necesarios que corresponden a cada calidad.
+autorizado.crear.calidad.nota2= *Si no cuentas con los documentos puedes continuar y adjuntarlos más adelante ya sea por ti o por tu seleccionado.
+autorizado.crear.calidad.admin=Administrador
+autorizado.crear.calidad.agofici=Agente Oficioso
+autorizado.crear.calidad.agenex=Agente Exclusivo
+autorizado.crear.calidad.albacea=Albacea
+autorizado.crear.calidad.apgeneral=Apoderado general
+autorizado.crear.calidad.apodespecial=Apoderado Especial
+autorizado.crear.calidad.contador=Contador
+autorizado.crear.calidad.curador=Curador
+autorizado.crear.calidad.dontarios=Donatarios
+autorizado.crear.calidad.herede=Heredero
+autorizado.crear.calidad.liqui=Liquidador
+autorizado.crear.calidad.padres=Padres
+autorizado.crear.calidad.replegal=Representante legal
+autorizado.crear.calidad.revfiscal=Revisor fiscal
+autorizado.crear.calidad.tutor=Tutor
+autorizado.crear.calidad.nota3=¡Atención!
+autorizado.crear.calidad.nota4=Para esta calidad X deberá de adjuntar los siguientes documentos:
+autorizado.crear.calidad.nota5=De contar con los documentos en este momento es necesario le de aviso a su Agente Autorizado realice esta carga de archivos, así como el tiempo de respuesta para solicitud es concluida una vez revisados los documentos adjuntos solicitados.
+autorizado.crear.calidad.nota6=Esta solicitud tiene 3 días para ser habilitada o se eliminará del sistema.
+autorizado.crear.calidad.nota7=Mas adelante hay una sección donde podrás adjuntar los documentos solicitados.
+
+autorizado.crear.impuesto.titulo= 3.- Selecciona el o los impuestos en los que te van a representar
+autorizado.crear.impuesto.nota1=Debes seleccionar al menos un impuesto
+autorizado.crear.impuesto.todos=Todos
+autorizado.crear.impuesto.concerv=Consumo de cerveza
+autorizado.crear.impuesto.conciga=Consumo cigarrillos
+autorizado.crear.impuesto.contespecial=Contribución especial de obra pública
+autorizado.crear.impuesto.delurban=Delineación urbana
+autorizado.crear.impuesto.estamp=Estampillas adulto mayor
+autorizado.crear.impuesto.estcult=Estampillas pro cultura
+autorizado.crear.impuesto.estuni=Estampillas pro universidad
+autorizado.crear.impuesto.indcom=Industria y comercio
+autorizado.crear.impuesto.lorfor=Loterías Foráneas
+autorizado.crear.impuesto.peruni=Predial unificado
+autorizado.crear.impuesto.pubeste=Publicidad exterior visual
+autorizado.crear.impuesto.reteica=Retenciones Industrial y Comercio
+autorizado.crear.impuesto.soblot=Sobre premios de lotería
+autorizado.crear.impuestovehiculos=Sobre vehículos automotores
+autorizado.crear.impuesto.gasolina=Sobretasa a la gasolina motor
+autorizado.crear.impuesto.unazar=Unificado de azar
+autorizado.crear.impuesto.undist=Universidad Distrital
+autorizado.crear.impuesto.nota2=Debes seleccionar el o los objetos en donde deseas que te representen
+autorizado.crear.impuesto.impu=Impuesto
+autorizado.crear.impuesto.objetos=Objetos
+autorizado.crear.impuesto.cdu=CDU
+autorizado.crear.impuesto.radicado=Radicado
+autorizado.crear.impuesto.selec=Seleccionar
+
+autorizado.crear.tramgen.titulo=4.- Selecciona si la representación es por Trámites/Proceso o General
+autorizado.crear.tramgen.nota1=Selecciona en que vas a solicitar ser representado
+autorizado.crear.tramgen.represen.titulo=Representación
+autorizado.crear.tramgen.represen.general=General
+autorizado.crear.tramgen.represen.proceso=Proceso
+autorizado.crear.tramgen.represen.tramites=Trámites
+autorizado.crear.tramgen.proce.titulo=Proceso
+autorizado.crear.tramgen.proce.todos=Todos
+autorizado.crear.tramgen.proce.cobco=Cobro Coactivo
+autorizado.crear.tramgen.proce.cobprej=Cobro prejurídico
+autorizado.crear.tramgen.proce.fisca=Fiscalización
+autorizado.crear.tramgen.proce.liqui=Liquidación
+autorizado.crear.tramgen.tramite.titulo=Trámites
+autorizado.crear.tramgen.tramite.todos=Todos
+autorizado.crear.tramgen.tramite.actut=Acción de tutela
+autorizado.crear.tramgen.tramite.actnov=Actualización y Novedades RIT
+autorizado.crear.tramgen.tramite.acpro=Acumulación procesos
+autorizado.crear.tramgen.tramite.ajfact=Ajuste factura
+autorizado.crear.tramgen.tramite.ancuenta=Análisis de cuenta
+autorizado.crear.tramgen.tramite.anfact=Anulación de factura
+autorizado.crear.tramgen.tramite.aptitt=Aplicación de Título de Depósito Judicial
+autorizado.crear.tramgen.tramite.audec=Auto aclaratorio
+autorizado.crear.tramgen.tramite.autdecla=Auto declarativo
+autorizado.crear.tramgen.tramite.cadacc=Caducidad de la Acción
+autorizado.crear.tramgen.tramite.cerres=Certificación de responsabilidad plusvalia
+autorizado.crear.tramgen.tramite.capact=Copia Actos Oficiales y/o Expendientes
+autorizado.crear.tramgen.tramite.declar=Declaración
+autorizado.crear.tramgen.tramite.demba=Desembargo
+autorizado.crear.tramgen.tramite.desglo=Desglose
+autorizado.crear.tramgen.tramite.redsan=Reducción sanción
+autorizado.crear.tramgen.tramite.remisi=Remisibilidad de obligaciones
+autorizado.crear.tramgen.tramite.reexfac=Reexpedir factura
+autorizado.crear.tramgen.tramite.sanea=Saneamiento
+autorizado.crear.tramgen.tramite.revdirec=Revocatoria directa
+autorizado.crear.tramgen.tramite.retbole=Retiro del Boletín de Deudores Morosos del Estado (BDM)
+autorizado.crear.tramgen.tramite.devoluciones=Devoluciones y/o Compensaciones
+autorizado.crear.tramgen.tramite.excep=Excepciones
+autorizado.crear.tramgen.tramite.solicitud=Solicitud de definir responsabilidad plusvalia
+autorizado.crear.tramgen.tramite.sucesiones=Sucesiones
+autorizado.crear.tramgen.tramite.susproces=Suspensión proceso
+autorizado.crear.tramgen.tramite.expedi=Expedición y legalización de tornaguías
+autorizado.crear.tramgen.tramite.facpag=Facilidades de pago
+autorizado.crear.tramgen.tramite.incidente=Incidente de proceso
+autorizado.crear.tramgen.tramite.informacion=Información estado de proceso 
+autorizado.crear.tramgen.tramite.insrit=Inscripción RIT
+autorizado.crear.tramgen.tramite.invali=Invalidación
+autorizado.crear.tramgen.tramite.modfact=Modificación de factura
+autorizado.crear.tramgen.tramite.nulidad=Nulidad
+autorizado.crear.tramgen.tramite.presc=Prescripción
+autorizado.crear.tramgen.tramite.recreconsi=Recurso de reconsideración
+autorizado.crear.tramgen.tramite.recrepos=Recurso de reposición
+autorizado.crear.tramgen.nota2=Selecciona el o los periodos gravables donde quieres representación
+autorizado.crear.tramgen.tramite.todos=Todos
+autorizado.crear.tramgen.tramite.2018= 2018
+autorizado.crear.tramgen.tramite.2017=2017
+autorizado.crear.tramgen.tramite.2016=2016
+autorizado.crear.tramgen.tramite.2015=2015
+
+autorizado.crear.documentos.titulo=5.- Anexar documentación
+autorizado.crear.documentos.nota1=Para continuar cin tu proceso es necesario anexar los documentos
+autorizado.crear.documentos.continuar=Continuar
+
+#asignarse agente autorizado
+autorizado.asignarse.inicial.titulo= Asignarse como agente autorizado
+autorizado.asignarse.inicial.nota=En esta sección podrás realizar las configuraciones necesarias para que puedas representar a un contribuyente.
+autorizado.asignarse.inicial.nota2=Al dar click en aceptar es con la responsabilidad.
+autorizado.asignarse.inicial.nota3=Deberás contar con los datos del contribuyente que vas a representar para ingresarlos en el formulario
+
+autorizado.asignarse.buscar.titulo= 1.- Buscar contribuyente a representar
+autorizado.asignarse.buscar.tipdoc=Tipo de documento
+autorizado.asignarse.buscar.numdoc=Número de documento
+autorizado.asignarse.buscar.fecexpe=Fecha de expedición
+autorizado.asignarse.buscar.cancelar=Cancelar
+autorizado.asignarse.buscar.buscar=Buscar
+
+autorizado.asignarse.table.tipdoc=Tipo documento
+autorizado.asignarse.table.numdoc=Número documento
+autorizado.asignarse.table.nombre=Nombre
+autorizado.asignarse.table.tipperson=Tipo de persona
+
+autorizado.asignarse.calidad.titulo=2.-Selecciona la calidad con la que vas a representar al Contribuyente
+autorizado.asignarse.calidad.nota1= Debes de seleccionar al menos una calidad para representar al Contribuyente
+autorizado.asignarse.calidad.admin=Administrador
+autorizado.asignarse.calidad.agofici=Agente Oficioso
+autorizado.asignarse.calidad.agenex=Agente Exclusivo
+autorizado.asignarse.calidad.albacea=Albacea
+autorizado.asignarse.calidad.apgeneral=Apoderado
+autorizado.asignarse.calidad.contador=Contador
+autorizado.asignarse.calidad.curador=Curador
+autorizado.asignarse.calidad.dontarios=Donatarios
+autorizado.asignarse.calidad.herede=Heredero
+autorizado.asignarse.calidad.liqui=Liquidador
+autorizado.asignarse.calidad.padres=Padres
+autorizado.asignarse.calidad.replegal=Representante legal
+autorizado.asignarse.calidad.revfiscal=Revisor
+autorizado.asignarse.calidad.tutor=Tutor
+autorizado.asignarse.calidad.nota3=¡Atención!
+autorizado.asignarse.calidad.nota4=Para esta calidad X deberá de adjuntar los siguientes documentos:
+autorizado.asignarse.calidad.nota5=De contar con los documentos en este momento es necesario le de aviso a su Agente Autorizado realice esta carga de archivos, así como el tiempo de respuesta para solicitud es concluida una vez revisados los documentos adjuntos solicitados.
+autorizado.asignarse.calidad.nota6=Esta solicitud tiene 3 días para ser habilitada o se eliminará del sistema.
+autorizado.asignarse.calidad.nota7=Mas adelante hay una sección donde podrás adjuntar los documentos solicitados.
+
+autorizado.asignarse.impuesto.titulo= 3.- Selecciona el o los impuestos en los que vas a representar al Contribuyente
+autorizado.asignarse.impuesto.nota1=Debes seleccionar al menos un impuesto
+autorizado.asignarse.impuesto.todos=Todos
+autorizado.asignarse.impuesto.concerv=Consumo de cerveza
+autorizado.asignarse.impuesto.conciga=Consumo cigarrillos
+autorizado.asignarse.impuesto.contespecial=Contribución especial de obra pública
+autorizado.asignarse.impuesto.delurban=Delineación urbana
+autorizado.asignarse.impuesto.estamp=Estampillas adulto mayor
+autorizado.asignarse.impuesto.estcult=Estampillas pro cultura
+autorizado.asignarse.impuesto.estuni=Estampillas pro universidad
+autorizado.asignarse.impuesto.indcom=Industria y comercio
+autorizado.asignarse.impuesto.lorfor=Loterías Foráneas
+autorizado.asignarse.impuesto.peruni=Predial unificado
+autorizado.asignarse.impuesto.pubeste=Publicidad exterior visual
+autorizado.asignarse.impuesto.reteica=Retenciones Industrial y Comercio
+autorizado.asignarse.impuesto.soblot=Sobre premios de lotería
+autorizado.asignarse.impuestovehiculos=Sobre vehículos automotores
+autorizado.asignarse.impuesto.gasolina=Sobretasa a la gasolina motor
+autorizado.asignarse.impuesto.unazar=Unificado de azar
+autorizado.asignarse.impuesto.undist=Universidad Distrital
+autorizado.asignarse.impuesto.nota2=Debes seleccionar el o los objetos en donde deseas que te representen
+autorizado.asignarse.impuesto.impu=Impuesto
+autorizado.asignarse.impuesto.objetos=Objetos
+autorizado.asignarse.impuesto.cdu=CDU
+autorizado.asignarse.impuesto.radicado=Radicado
+autorizado.asignarse.impuesto.selec=Seleccionar
+
+autorizado.asignarse.tramgen.titulo=4.- Selecciona si la representación es por Trámites/Proceso o General
+autorizado.asignarse.tramgen.nota1=Selecciona en que vas a solicitar ser representado
+autorizado.asignarse.tramgen.represen.titulo=Representación
+autorizado.asignarse.tramgen.represen.general=General
+autorizado.asignarse.tramgen.represen.proceso=Proceso
+autorizado.asignarse.tramgen.represen.tramites=Trámites
+autorizado.asignarse.tramgen.proce.titulo=Proceso
+autorizado.asignarse.tramgen.proce.todos=Todos
+autorizado.asignarse.tramgen.proce.cobco=Cobro Coactivo
+autorizado.asignarse.tramgen.proce.cobprej=Cobro prejurídico
+autorizado.asignarse.tramgen.proce.fisca=Fiscalización
+autorizado.asignarse.tramgen.proce.liqui=Liquidación
+autorizado.asignarse.tramgen.tramite.titulo=Trámites
+autorizado.asignarse.tramgen.tramite.todos=Todos
+autorizado.asignarse.tramgen.tramite.actut=Acción de tutela
+autorizado.asignarse.tramgen.tramite.actnov=Actualización y Novedades RIT
+autorizado.asignarse.tramgen.tramite.acpro=Acumulación procesos
+autorizado.asignarse.tramgen.tramite.ajfact=Ajuste factura
+autorizado.asignarse.tramgen.tramite.ancuenta=Análisis de cuenta
+autorizado.asignarse.tramgen.tramite.anfact=Anulación de factura
+autorizado.asignarse.tramgen.tramite.aptitt=Aplicación de Título de Depósito Judicial
+autorizado.asignarse.tramgen.tramite.audec=Auto aclaratorio
+autorizado.asignarse.tramgen.tramite.autdecla=Auto declarativo
+autorizado.asignarse.tramgen.tramite.cadacc=Caducidad de la Acción
+autorizado.asignarse.tramgen.tramite.cerres=Certificación de responsabilidad plusvalia
+autorizado.asignarse.tramgen.tramite.capact=Copia Actos Oficiales y/o Expendientes
+autorizado.asignarse.tramgen.tramite.declar=Declaración
+autorizado.asignarse.tramgen.tramite.demba=Desembargo
+autorizado.asignarse.tramgen.tramite.desglo=Desglose
+autorizado.asignarse.tramgen.tramite.redsan=Reducción sanción
+autorizado.asignarse.tramgen.tramite.remisi=Remisibilidad de obligaciones
+autorizado.asignarse.tramgen.tramite.reexfac=Reexpedir factura
+autorizado.asignarse.tramgen.tramite.sanea=Saneamiento
+autorizado.asignarse.tramgen.tramite.revdirec=Revocatoria directa
+autorizado.asignarse.tramgen.tramite.retbole=Retiro del Boletín de Deudores Morosos del Estado (BDM)
+autorizado.asignarse.tramgen.tramite.devoluciones=Devoluciones y/o Compensaciones
+autorizado.asignarse.tramgen.tramite.excep=Excepciones
+autorizado.asignarse.tramgen.tramite.solicitud=Solicitud de definir responsabilidad plusvalia
+autorizado.asignarse.tramgen.tramite.sucesiones=Sucesiones
+autorizado.asignarse.tramgen.tramite.susproces=Suspensión proceso
+autorizado.asignarse.tramgen.tramite.expedi=Expedición y legalización de tornaguías
+autorizado.asignarse.tramgen.tramite.facpag=Facilidades de pago
+autorizado.asignarse.tramgen.tramite.incidente=Incidente de proceso
+autorizado.asignarse.tramgen.tramite.informacion=Información estado de proceso 
+autorizado.asignarse.tramgen.tramite.insrit=Inscripción RIT
+autorizado.asignarse.tramgen.tramite.invali=Invalidación
+autorizado.asignarse.tramgen.tramite.modfact=Modificación de factura
+autorizado.asignarse.tramgen.tramite.nulidad=Nulidad
+autorizado.asignarse.tramgen.tramite.presc=Prescripción
+autorizado.asignarse.tramgen.tramite.recreconsi=Recurso de reconsideración
+autorizado.asignarse.tramgen.tramite.recrepos=Recurso de reposición
+autorizado.asignarse.tramgen.nota2=Selecciona el o los periodos gravables donde quieres representación
+autorizado.asignarse.tramgen.tramite.todos=Todos
+autorizado.asignarse.tramgen.tramite.2018= 2018
+autorizado.asignarse.tramgen.tramite.2017=2017
+autorizado.asignarse.tramgen.tramite.2016=2016
+autorizado.asignarse.tramgen.tramite.2015=2015
+
+autorizado.asignarse.documentos.titulo=5.- Anexar documentación
+autorizado.asignarse.documentos.nota1=Para continuar cin tu proceso es necesario anexar los documentos
+autorizado.asignarse.documentos.salir=Salir
+
+autorizado.asignarse.resumen.titulo=Resumen
+autorizado.asignarse.resumen.nota1= Validar que todo haya sido seleccionado de forma correcta
+autorizado.asignarse.resumen.nomcont=Nombre contribuyente representar
+autorizado.asignarse.resumen.tipdoc=Tipo de documento
+autorizado.asignarse.resumen.numdoc=Número documento
+autorizado.asignarse.resumen.calidad=Calidad en representación
+autorizado.asignarse.resumen.nomagente=Nombre agente autorizado
+autorizado.asignarse.resumen.permisos=Permisos
+autorizado.asignarse.resumen.cancelar=Cancelar
+autorizado.asignarse.resumen.guardar=Guardar
+autorizado.asignarse.resumen.revisar=Revisar
+autorizado.asignarse.resumen.enviar=Enviar
+autorizado.asignarse.resumen.addcalidad=Agregar otra calidad
+autorizado.asignarse.resumen.nota2=Se enviará a un Funcionario Facultado de la SDH para su revisión y autorización
 
